traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:11: error: ';' expected but ')' found.
    if (((cpt-tourne)%6==0)) && !tourneboucleavant) {
                                                  ^